--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,15 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-script: pytest
-before_install:
-  pip install codecov
-after_success:
-  codecov
+install:
+  - travis_retry pip install -r requirements.txt -r test-requirements.txt -e .
+  - travis_retry pip install coverage coveralls
+
+script: py.test --cov pyJolt --cov-report term-missing --flakes
+
+after_script:
+  - coveralls
+
+branches:
+  only:
+    - master
