Migrate to json file testing

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pytest-cov = '>=1.6'
 pytest-flakes = '>=0.2'
 tox = '>=1.7.0'
 deepdiff = '>=4.0.6'
+jsoncomment = '>=0.4.2'
 
 [requires]
 python_version = "3.7"
